--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -42,7 +43,12 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.3.5'
     //noinspection GradleCompatible
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    // (...)
+    implementation 'com.facebook.android:facebook-android-sdk:4.6.0'
+    // (...)
+    implementation 'junit:junit:4.12'
 }
