--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication3">
         <activity
+            android:name=".SignUp_Activity"
+            android:exported="false" />
+        <activity
             android:name=".Friend_Activity"
             android:exported="false" />
         <activity
